flexing progress: evenly, but text-overflow not working correctly

--- a/outbox/src/components/email-list/email-list-item/email-preview/email-preview.styles.css
+++ b/outbox/src/components/email-list/email-list-item/email-preview/email-preview.styles.css
@@ -6,10 +6,6 @@
     font-size: 12px;
 }
 
-.heading {
-
-}
-
 .heading-icon {
     vertical-align: middle;
 }
